--- a/src/css/container.css
+++ b/src/css/container.css
@@ -3,7 +3,7 @@
   min-width: 320px;
   max-width: 375px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0px 16px;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
@@ -14,6 +14,12 @@
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
+    max-width: 1128px;
   }
+}
+.container-form {
+  min-width: 320px;
+  max-width: 408px;
+  margin: 0 auto;
+  padding: 24px;
 }
